--- a/DOR.html
+++ b/DOR.html
@@ -1,7 +1,10 @@
 <div class="container">
 <head>
   <script src="https://kit.fontawesome.com/a24879a822.js" crossorigin="anonymous"></script>
-    
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>  
 </head>
 
     <form class="well form-horizontal" action=" " method="post"  id="dor_form">
@@ -12,12 +15,12 @@
 
 <!-- Text input-->
 
-<div class="form-group">
+<div class="form-group" id="app">
   <label class="col-md-4 control-label">FTO Name</label>  
   <div class="col-md-4 inputGroupContainer">
   <div class="input-group">
   <span class="input-group-addon"><i class="fa-solid fa-user-police"></i></span>
-  <input  name="fto_name" placeholder="Firstname Lastname" class="form-control"  type="text">
+  <input  name="fto_name" placeholder="Firstname Lastname" class="form-control"  type="text" v-model="fto_name">
     </div>
   </div>
 </div>
@@ -29,7 +32,7 @@
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
   <span class="input-group-addon"><i class="fa-sharp fa-regular fa-badge-sheriff"></i></span>
-  <input name="po_name" placeholder="Serial Number" class="form-control"  type="text">
+  <input name="po_name" placeholder="Serial Number" class="form-control"  type="text" v-model="fto_serial">
     </div>
   </div>
 </div>
@@ -39,7 +42,7 @@
   <div class="col-md-4 inputGroupContainer">
   <div class="input-group">
   <span class="input-group-addon"><i class="fa-solid fa-user-police"></i></span>
-  <input  name="po_name" placeholder="Firstname Lastname" class="form-control"  type="text">
+  <input  name="p1_name" placeholder="Firstname Lastname" class="form-control"  type="text" v-model="p1_name">
     </div>
   </div>
 </div>  
@@ -49,7 +52,7 @@
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
   <span class="input-group-addon"><i class="fa-sharp fa-regular fa-badge-sheriff"></i></span>
-  <input name="po_name" placeholder="Serial Number" class="form-control"  type="text">
+  <input name="p1_name" placeholder="Serial Number" class="form-control"  type="text" v-model="p1_serial">
     </div>
   </div>
 </div>  
@@ -60,7 +63,7 @@
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
     <span class="input-group-addon"><i class="fa-solid fa-calendar-days"></i></span>
-  <input name="report_date" placeholder="DD/MMM/YYYY" class="form-control"  type="text">
+  <input name="ftp_date" placeholder="DD/MMM/YYYY" class="form-control"  type="text" v-model="ftp_date">
     </div>
   </div>
 </div>
@@ -73,7 +76,7 @@
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
         <span class="input-group-addon"><i class="fa-solid fa-chart-simple"></i></span>
-  <input name="phase" placeholder="e.g. II-2" class="form-control" type="text">
+  <input name="phase" placeholder="e.g. II-2" class="form-control" type="text" v-model="phase">
     </div>
   </div>
 </div>
@@ -93,6 +96,8 @@
                     <th v-if="Object.keys(gradingCriterias)[0] == _index">S</th>
                     <th v-if="Object.keys(gradingCriterias)[0] == _index">C</th>
                     <th v-if="Object.keys(gradingCriterias)[0] == _index">N/I</th>
+                    <th v-if="Object.keys(gradingCriterias)[0] == _index">N/O</th>
+                    <th v-if="Object.keys(gradingCriterias)[0] == _index">NRT</th>
                 </tr>
                 <tr v-for="(criteria, index) in section">
                     <td>{{ criteria }}</td>
@@ -103,6 +108,12 @@
                             :id=`score_${Object.keys(gradingCriterias).indexOf(_index)}_${index}_1` type="radio"
                             :name=`score_${Object.keys(gradingCriterias).indexOf(_index)}_${index}`></td>
                     <td><input class="form-check-input"
+                            :id=`score_${Object.keys(gradingCriterias).indexOf(_index)}_${index}_2` type="radio"
+                            :name=`score_${Object.keys(gradingCriterias).indexOf(_index)}_${index}`></td>
+                    <td><input class="form-check-input"
+                            :id=`score_${Object.keys(gradingCriterias).indexOf(_index)}_${index}_2` type="radio"
+                            :name=`score_${Object.keys(gradingCriterias).indexOf(_index)}_${index}`></td>
+                     <td><input class="form-check-input"
                             :id=`score_${Object.keys(gradingCriterias).indexOf(_index)}_${index}_2` type="radio"
                             :name=`score_${Object.keys(gradingCriterias).indexOf(_index)}_${index}`></td>
                 </tr>
@@ -134,3 +145,96 @@
 </form>
 </div>
     </div><!-- /.container -->
+
+    <script>
+
+
+        const app = Vue.createApp({
+
+
+            async created(){
+
+                await fetch('DOR_ratings.json').then((res) => res.json()).then(data => this.gradingCriterias = data)
+            },
+
+            data() {
+                return {
+
+                    gradingCriterias: []
+                }
+            },
+            methods: {
+
+                async generateBBCode() {
+
+
+
+                    var scores = [];
+
+
+                    Object.keys(this.gradingCriterias).forEach((_index) => {
+
+                        var section = this.gradingCriterias[_index];
+
+
+
+                        section.forEach((grading, index) => {
+
+                            try{
+                                var ticked_id = document.querySelector(`input[name="score_${Object.keys(this.gradingCriterias).indexOf(_index)}_${index}"]:checked`).id.split("_").pop()
+                            } catch {
+                                var ticked_id = 4;
+                            }
+
+
+
+
+                            var score_template = `[td color=transparent id=D/S][center][cb][/center][/td]
+        [td color=transparent id=N/I][center][cb][/center][/td]
+        [td color=transparent id=C][center][cb][/center][/td]
+        [td color=transparent id=S][center][cb][/center][/td]
+        [td color=transparent id=N/O][center][cb][/center][/td]
+        [td color=transparent id=NRT][center][cb][/center][/td]
+        [td color=transparent id=R/T MIN][center][color=black][size=95]X min[/size][/color][/center][/td]`
+
+                            for (let index = 0; index <= 2; index++) {
+
+
+
+                                var new_value = "cb";
+
+                                if (index == ticked_id)
+                                    new_value = "cbf";
+
+                                score_template = score_template.replaceAll(`%CB${index}%`, new_value);
+
+
+
+
+                            }
+
+                            scores.push(score_template);
+
+                        });
+
+
+                    });
+
+
+
+                    var bbcode_unformatted;
+                    await fetch('DOR.txt').then((res) => res.text()).then(data => bbcode_unformatted = data);
+
+                    var bbcode = eval(`\`${bbcode_unformatted}\``);
+                    navigator.clipboard.writeText(bbcode);
+
+
+
+                }
+            }
+
+
+        });
+        app.mount("#app");
+
+    </script>
