--- a/DOR.html
+++ b/DOR.html
@@ -5,6 +5,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>  
+  <script src= "DOR.js"></script>
+  <script src= "DOR_ratings.js"></script>
 </head>
 
     <form class="well form-horizontal" action=" " method="post"  id="dor_form">
