--- a/DOR.html
+++ b/DOR.html
@@ -1,5 +1,6 @@
 <div class="container">
 <head>
+  <link rel="stylesheet" href="DOR.css">
   <script src="https://kit.fontawesome.com/a24879a822.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
