--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <div class="container">
 <head onload="setup()">
   <link rel="stylesheet" href="DOR.css">
@@ -241,3 +243,4 @@
         app.mount("#app");
 
     </script>
+</html>
